[gd_scene load_steps=5 format=3 uid="uid://c0rhe2oa7fnp2"]

[ext_resource type="Script" path="res://Build Here.gd" id="1_tm5yk"]
[ext_resource type="Texture2D" uid="uid://cdbjs4bd5eukh" path="res://IM PICK/g8477.png" id="2_kaojx"]
[ext_resource type="Texture2D" uid="uid://jvtscwgqdtof" path="res://spear.png" id="3_1hllp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1pk7a"]
size = Vector2(36, 36)

[node name="Build Here" type="Node2D"]
script = ExtResource("1_tm5yk")

[node name="G8477" type="Sprite2D" parent="."]
scale = Vector2(0.350652, 0.31223)
texture = ExtResource("2_kaojx")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-1, 2)
scale = Vector2(2.32868, 2.02461)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2, -1)
shape = SubResource("RectangleShape2D_1pk7a")

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = -48.0
offset_top = -117.0
offset_right = -8.0
offset_bottom = -77.0
scale = Vector2(1.19133, 1.16924)
texture_normal = ExtResource("3_1hllp")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
